--- a/style.css
+++ b/style.css
@@ -3,214 +3,188 @@
 	margin: 0px;
 	box-sizing: border-box;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-	  Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-	  sans-serif;
-  }
-  
-  .mens_clothes {
+		Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+		sans-serif;
+}
+
+.mens_clothes {
 	width: 100%;
 	border: 1px solid black;
-  
+
 	.bag {
-	  display: flex;
-	  justify-content: center;
-	  padding: 20px;
-	  img {
-		object-fit: contain;
-		width: 100%;
-		height: 200px;
-	  }
-	}
-  
-	.clothing {
-	  display: flex;
-	  flex-direction: column;
-	  gap: 20px;
-	  background-color: #000000;
-	  padding: 20px;
-  
-	  .men_clothing {
-		font-size: 24px;
-		font-weight: 600;
-		line-height: 29.4px;
-		color: #ffffff;
-  
-		/* .truncate { */
-		  width: 250px;
-		  white-space: nowrap;
-		  overflow: hidden;
-		  text-overflow: ellipsis;
-		/* } */
-	  }
-  
-	  .perfect {
-		font-size: 14px;
-		font-weight: 600;
-		line-height: 17.15px;
-		color: #ffffff;
-	  }
-  
-	  .prices {
 		display: flex;
-		align-items: center;
-		gap: 40px;
-		.price span {
-		  margin-right: 15px;
-		  margin-left: 5px;
+		justify-content: center;
+		padding: 20px;
+		img {
+			object-fit: contain;
+			width: 100%;
+			height: 200px;
 		}
-  
-		font-size: 24px;
-		font-weight: 500;
-		line-height: 29.11px;
-		color: whi
-	  }
-  
-	  button {
-		border: 1px solid #000000;
-		border-radius: 10px;
-		background-color: white;
-		width: 100%;
-		height: 55px;
-		cursor: pointer;
-  
-		font-size: 18px;
-		font-weight: 600;
-		line-height: 22.05px;
-		text-align: center;
-  
-		&:hover {
-		  color: white;
-		  background: #1F86FF;
-		}
-  
-	  }
 	}
-  }
-  
-  
-  
-  aside {
+
+	.clothing {
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+		background-color: #000000;
+		padding: 20px;
+
+		.men_clothing {
+			font-size: 24px;
+			font-weight: 600;
+			line-height: 29.4px;
+			color: #ffffff;
+
+			/* .truncate { */
+			width: 250px;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			/* } */
+		}
+
+		.perfect {
+			font-size: 14px;
+			font-weight: 600;
+			line-height: 17.15px;
+			color: #ffffff;
+		}
+
+		.prices {
+			display: flex;
+			align-items: center;
+			gap: 40px;
+			.price span {
+				margin-right: 15px;
+				margin-left: 5px;
+			}
+
+			font-size: 24px;
+			font-weight: 500;
+			line-height: 29.11px;
+			color: #ffffff;
+		}
+
+		button {
+			border: 1px solid #000000;
+			border-radius: 10px;
+			background-color: white;
+			width: 100%;
+			height: 55px;
+			cursor: pointer;
+
+			font-size: 18px;
+			font-weight: 600;
+			line-height: 22.05px;
+			text-align: center;
+
+			&:hover {
+				color: white;
+				background: #1f86ff;
+			}
+		}
+		.active-btn {
+			color: white;
+			background: #1f86ff;
+		}
+	}
+}
+
+aside {
 	position: fixed;
 	top: 0px;
 	right: -100%;
 	bottom: 0px;
-	background-color: grey;
+	background-color: #c4c4c4;
 	padding: 20px;
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
 	width: 40%;
-  
+	transition: 0.5s ease;
+
 	.info {
-	  width: 100%;
-	  display: flex;
-	  align-items: center;
-	  justify-content: space-between;
-	}
-  
-	.list {
-	  width: 100%;
-	  height: 70%;
-	  position: relative;
-	  
-  
-	  &::after {
-		content:  "";
-		display: block;
 		width: 100%;
-		height: 140px;
-		background: linear-gradient(transparent, grey);
-		position: absolute;
-		bottom: 0px;
-	  }
-	  .scrollable-list {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.list {
+		width: 100%;
+		height: 70%;
+		position: relative;
+
+		&::after {
+			content: "";
+			display: block;
+			width: 100%;
+			height: 140px;
+			background: linear-gradient(transparent, #c4c4c4);
+			position: absolute;
+			bottom: 0px;
+		}
+
+		.scrollable-list {
+			display: flex;
+			flex-direction: column;
+			gap: 12px;
+			overflow-y: scroll;
+			max-height: 100%;
+
+			.item {
+				width: 100%;
+				min-height: 100px;
+
+				background: gray;
+			}
+		}
+	}
+	.show_total {
+		width: 100%;
+		height: 30%;
+		background-color: #fff;
 		display: flex;
 		flex-direction: column;
-		gap: 12px;
-		/* overflow-y: scroll; */
-		max-height: 100%;
-  
-		.item {
-		  padding: 0 20px;
-		  width: 100%;
-		  min-height: 100px;
-		  background: white;
-		  border: #000000 solid 2px;
-		  border-radius: 10px;
-		}
-	  }
-  
+		justify-content: space-between;
+		border-radius: 14px;
+		padding: 20px;
 	}
-  
-	.show_total {
-	  width: 100%;
-	  height: 30%;
-	  background-color: white;
-	  display: flex;
-	  flex-direction: column;
-	  justify-content: space-around;
-	  border-radius: 14px;
-	  padding: 20px;
-  
-  
-	}
-  }
-  
-  
-  .head {
-	justify-content: center;
-	display: flex;
-	align-items: center;
-  }
-  .menu_item {
+}
+
+.item {
 	display: flex;
 	justify-content: space-between;
-  }
-  
-  .menu_left {
-	display: flex;
-	gap: 50px;
 	align-items: center;
-  }
-  .menu_right {
-	display: grid;
-  
-  }
-  
-  .img {
-	background-image: url("https://avatars.mds.yandex.net/i?id=2c1ade9ecf7c95af43dfcab8b91ef1c0-5480282-images-thumbs&n=13") ;
-	background-repeat: no-repeat;
-	background-size: cover  ;
-	width: 50px;
-	height: 50px;
-  }
-  .remove_btn, .close {
-	border-radius: 10px;
-	padding: 5px;
-	background-color: #f2f2f2;
-	cursor: pointer;
-  }
+	padding: 12px;
+	border-radius: 12px;
+	.left,
+	.right {
+		display: flex;
+		align-items: center;
+		gap: 6px;
 
-  .decrease, .increase  {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-color: #f2f2f2;
-	border: none;
-	cursor: pointer;
-	padding: 5px;
-	width: 30px;
-	height: 20px;
-}
+		img {
+			width: 80px;
+			height: 80px;
+			object-fit: contain;
+			background-color: white;
+		}
 
+		.col {
+			display: flex;
+			flex-direction: column;
+			gap: 6px;
+			align-items: start;
 
-.btns_inp {
-	width: 80px;
-	text-align: center;
-}
-
-.btns {
-	gap: 10px;
-	display: flex;
-	align-items: center;
+			input {
+				width: 50px;
+			}
+			button {
+				padding: 4px;
+			}
+		}
+	}
+	.right {
+		flex-direction: column;
+	}
 }
